# Rustory

./: .gitignore  CONTRIBUTING.md  README.md  compose.yaml  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: pull_request_template.md
.github/workflows/: build-release.yml  promote-release.yml  verify.yml
docker/: Dockerfile.rust-dev
docs/: project-context.md  release-runbook.md  update-signing.md
docs/architecture/: device-support-profile.md  product-language.md  ui-states.md
src/: main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/bundle/linux/: rustory-mime.xml  rustory.desktop
src-tauri/capabilities/: default.json
src-tauri/examples/: automount_smoke.rs  device_import_smoke.rs  device_library_smoke.rs
src-tauri/migrations/: 0001_init.sql  0002_story_drafts.sql  0003_story_imports.sql  0004_pack_metadata.sql  0005_transfer_jobs.sql  0006_story_local_imports.sql  0007_node_content_and_media.sql  0008_assets_content_hash_index.sql  0009_multi_node_structure.sql  0010_import_review_resolution.sql  0011_structured_folder_provenance.sql  0012_story_imports_source_family.sql  0013_rss_provenance.sql  0014_structured_archive_provenance.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: mod.rs
src-tauri/src/application/device/: catalog.rs  delete.rs  import.rs  library.rs  mod.rs  preflight.rs  send.rs  title.rs  transfer.rs
src-tauri/src/application/import_export/: archive_creation.rs  drop_intent.rs  export.rs  import.rs  mod.rs  os_open.rs  rss_creation.rs  structured_creation.rs
src-tauri/src/application/story/: mod.rs  node.rs  recovery.rs  review.rs  scope.rs  structure.rs
src-tauri/src/application/transfer/: mod.rs  outcome.rs  prepare.rs  transfer.rs
src-tauri/src/application/update/: apply.rs  mod.rs
src-tauri/src/commands/: catalog.rs  device.rs  import_export.rs  library.rs  mod.rs  settings.rs  shared.rs  story.rs  transfer.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/device/: family.rs  library.rs  markers.rs  mod.rs  operations.rs  pack.rs  pack_transcode.rs  profile.rs  support_matrix.rs  title.rs
src-tauri/src/domain/export/: artifact.rs  mod.rs
src-tauri/src/domain/import/: artifact.rs  content_source.rs  file_association.rs  local_artifact.rs  mod.rs  recognition.rs  rss.rs  structured_archive.rs  structured_folder.rs
src-tauri/src/domain/shared/: error.rs  mod.rs
src-tauri/src/domain/story/: draft.rs  integrity.rs  mod.rs  preflight.rs  schema.rs  validation.rs
src-tauri/src/domain/transfer/: mod.rs  outcome.rs  preparation.rs  transfer.rs
src-tauri/src/domain/update/: apply.rs  availability.rs  mod.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/db/: mod.rs
src-tauri/src/infrastructure/device/: automount.rs  catalog_source.rs  cipher.rs  deleter.rs  fixtures.rs  library_reader.rs  mock.rs  mod.rs  pack_assembly.rs  pack_reader.rs  parser.rs  rss_source.rs  scanner.rs  system.rs  v3_pack_writer.rs  writer.rs
src-tauri/src/infrastructure/diagnostics/: device_log.rs  import_log.rs  jsonl.rs  mod.rs  recovery_log.rs  transfer.rs  update_log.rs
src-tauri/src/infrastructure/filesystem/: app_paths.rs  catalog_covers.rs  import_store.rs  mod.rs  node_media.rs  transfer_artifacts.rs
src-tauri/src/infrastructure/updates/: apply_gateway.rs  mod.rs  release_source.rs
src-tauri/src/ipc/: events.rs  mod.rs
src-tauri/src/ipc/dto/: device.rs  device_catalog.rs  device_delete.rs  device_import.rs  device_library.rs  device_send.rs  device_title.rs  import_export.rs  library.rs  mod.rs  settings.rs  story.rs  story_preparation.rs  story_transfer.rs  story_validation.rs  transfer_preview.rs
src-tauri/tests/: contracts.rs  integration.rs
src-tauri/tests/contracts/: content_source_policy.rs  device.rs  device_import.rs  device_library.rs  drop_intent.rs  file_association.rs  import_export.rs  library_overview.rs  os_open.rs  rss_creation.rs  story.rs  story_preparation.rs  story_transfer.rs  story_validation.rs  support_profile.rs  transfer_preview.rs  update_apply.rs  update_availability.rs
src-tauri/tests/integration/: content_source_convergence.rs  device_command.rs  device_import.rs  device_library.rs  device_log.rs  device_scan.rs  device_titles.rs  flam_support.rs  import_review_resolution_migration.rs  multi_node_structure_migration.rs  node_content_migration.rs  recovery_log.rs  rss_creation.rs  rss_provenance_migration.rs  storage_init.rs  story_drafts_migration.rs  story_drafts_recovery.rs  story_edit_scope.rs  story_export.rs  story_imports_migration.rs  story_imports_source_family_migration.rs  story_local_imports_migration.rs  story_persistence.rs  story_preparation.rs  story_transfer.rs  story_validation.rs  structured_folder_creation.rs  structured_folder_provenance_migration.rs  transfer_outcome.rs  transfer_preview.rs  update_apply.rs  update_availability.rs
src/app/: AppShell.css  AppShell.tsx  drop-bootstrap.test.ts  drop-bootstrap.ts  os-open-bootstrap.test.ts  os-open-bootstrap.ts  router.test.tsx  router.tsx  update-bootstrap.test.ts  update-bootstrap.ts
src/features/device/: index.ts  title-provenance.test.ts  title-provenance.ts
src/features/transfer/: index.ts
src/ipc/commands/: device-catalog.test.ts  device-catalog.ts  device-delete.ts  device-import.test.ts  device-import.ts  device-library.test.ts  device-library.ts  device-send.ts  device-title.test.ts  device-title.ts  device.test.ts  device.ts  import-export.test.ts  import-export.ts  library.ts  settings.test.ts  settings.ts  story-preparation.test.ts  story-preparation.ts  story-transfer.test.ts  story-transfer.ts  story-validation.test.ts  story-validation.ts  story.test.ts  story.ts  transfer-preview.test.ts  transfer-preview.ts
src/ipc/contract-tests/: library.test.ts
src/ipc/events/: drop-events.test.ts  drop-events.ts  job-events.test.ts  job-events.ts  os-open-events.test.ts  os-open-events.ts  update-apply-events.test.ts  update-apply-events.ts
src/routes/settings/: SettingsRoute.css  SettingsRoute.test.tsx  (+1 more)
(+194 files in other folders)
