[package]
name = "rustory"
version = "0.1.0"
description = "Rustory — local-first desktop companion for Lunii and other supported devices"
authors = ["Rustory contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rustory_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "=2.7.0"
# Added 2026-07-16 for the OS-open channel: relays a second launch's
# (argv, cwd) to the living instance (Windows/Linux hand "open with
# Rustory" gestures to a NEW process) and enforces the one-process-per-
# app_data_dir invariant the recovery journals assume. Deliberately
# WITHOUT the `deep-link` feature (URL schemes only — file associations
# do not go through it), no npm companion package, no new capability
# (the plugin exposes no JS API). Desktop-only; Linux rides the D-Bus
# stack (zbus already in the tree), Windows rides windows-sys (already
# present).
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "=0.32", features = ["bundled"] }
uuid = { version = "=1.11", features = ["v7"] }
sha2 = "=0.10"
time = { version = "=0.3", features = ["formatting", "parsing", "macros", "serde"] }
unicode-normalization = "=0.1"
tempfile = "=3.27.0"
# Cross-platform USB Mass Storage volume enumeration for the Lunii
# detection scan (story 2-1). Maintained by sysinfo-rs/sysinfo, widely
# deployed, no GUI/runtime dep, no transitive C deps beyond OS APIs.
sysinfo = "=0.32"
# Blocking HTTP client for the EXPLICIT official-catalog fetch (story 2-6,
# Phase C). `native-tls` links the system OpenSSL (CI installs libssl-dev;
# no cmake needed, unlike the rustls/aws-lc backend). The fetch only ever
# runs on a deliberate user action (offline-first guardrail) and is driven
# on a `spawn_blocking` worker behind the `OfficialCatalogSource` trait.
reqwest = { version = "=0.12.9", default-features = false, features = ["blocking", "native-tls"] }
# Event-driven XML reader for the bounded RSS 2.0 ingestion parse. Pure
# Rust, zero cmake (CI TLS constraint), no external-entity resolution and
# no DTD expansion by construction (no XXE, no entity bombs); the domain
# parser adds its own depth/count/length bounds. `feed-rs` was refused
# (chrono/mime/regex transitives, a second time stack next to `time`, a
# model oversized for the minimal RSS 2.0 scope).
quick-xml = "=0.40.1"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-only D-Bus binding used to talk to udisks2 and auto-mount a
# plugged Lunii whose volume the desktop session did not auto-mount
# (common with minimal DEs / lockdown polkit rules). Pinned strict.
# `blocking-api` keeps the integration synchronous so it slots into
# the existing scanner without forcing tokio onto the workspace.
# `async-io` is zbus's own mandatory transport backend (its default);
# it was previously activated by feature unification through
# tauri-plugin-opener's transitive zbus — the opener removal makes the
# activation explicit, adding no crate that was not already in the tree.
zbus = { version = "=5.16", default-features = false, features = ["async-io", "blocking-api"] }
